# ShogiBoardQ

./: .clang-tidy  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakeUserPresets.json  Doxyfile  GEMINI.md  README.md  all_sources.txt  fix_handicap_w_start.patch  run_debug.sh  test2_branch.kif  test_branch.kif
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  regression_report.yml  security_report.yml
.github/workflows/: ci.yml  maintenance-reminder.yml  release.yml
.qtcreator/: CMakeLists.txt.user.9dc711f  CMakeLists.txt.user.d58290c
build-review/: CMakeCache.txt  CTestTestfile.cmake  Makefile  ShogiBoardQ_en.qm  ShogiBoardQ_ja_JP.qm  cmake_install.cmake  compile_commands.json
build-review/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-review/ShogiBoardQ_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-review/tests/: CTestTestfile.cmake  Makefile  bench_movevalidator  cmake_install.cmake  tst_analysisflow  tst_coredatastructures  tst_csaconverter  tst_enginemovevalidator_compat  tst_enginemovevalidator_context  tst_enginemovevalidator_crosscheck  tst_fmv_perft  tst_fmvbitboard81  tst_fmvconverter  tst_fmvlegalcore  tst_fmvposition  tst_game_start_flow  tst_gamerecordmodel  tst_integration  tst_jkfconverter  tst_josekiwindow  tst_ki2converter  tst_kifconverter  tst_kifu_comment_sync  tst_kifubranchtree  tst_livegamesession  tst_navigation  tst_positionedit_gamestart  tst_preset_gamestart_cleanup  tst_sfentracer  tst_shogiboard  tst_shogiclock  tst_ui_display_consistency  tst_usenconverter  tst_usiconverter  tst_usiprotocolhandler
docs/: NAVIGATION_TEST.md  REMATCH_TEST.md  board-edit.html  branch_navigation_spec.md  commenting-style-guide.md  consideration.html  csa-game.html  debug-logging-guidelines.md  debug-migration-prompts.md  developer-guide-prompts.md  developer-guide.md  dock.html  game-play.html  image-export.html  index.html  joseki.html  kifu-analysis.html  kifu-display.html  kifu-io-features.md  kifu-management.html  kyokumenshu-viewer.html  menu.html  multi-os.html  multilanguage.html  nyugyoku.html  sitemap.xml  tsumeshogi-generator.html  tsumeshogi.html  tsumi-search.html  ui-state-policy.md
docs/css/: style.css
docs/dev/: arch-linux-aur-packaging.md  button-color-scheme.md  ci-troubleshooting.md  code-quality-execution-tasks-2026-02-27.md  code-quality-improvement-proposal-2026-02-27.md  kpi-thresholds.md  (+44 more)
include/: abstractlistmodel.h  analysiscoordinator.h  analysisflowcontroller.h  analysisresultspresenter.h  analysistabwiring.h  apptooltipfilter.h  boardimageexporter.h  boardinteractioncontroller.h  boardsetupcontroller.h  boardsyncpresenter.h  branchcandidatescontroller.h  branchdisplayplan.h  branchwiringcoordinator.h  changeenginesettingsdialog.h  considarationdialog.h  considerationdialog.h  considerationflowcontroller.h  csaclient.h  csagamecoordinator.h  csagamedialog.h  csagamewiring.h  csatosfenconverter.h  csawaitingdialog.h  dialogcoordinator.h  elidelabel.h  engineanalysistab.h  engineinfowidget.h  engineprocessmanager.h  engineregistrationdialog.h  enginesettingsconstants.h  enginesettingscoordinator.h  errorbus.h  evalgraphpresenter.h  evaluationchartwidget.h  evaluationgraphcontroller.h  gamelayoutbuilder.h  gamerecordmodel.h  gamestartcoordinator.h  gamestatecontroller.h  globaltooltip.h  (+74 more)
resources/: app.rc  include-baseline.txt  shogiboardq.qrc
samplekifu/: kiou202503020101.csa  kiou202503020101.jkf  kiou202503020101.ki2  kiou202503020101.kif  kiou202503020101.kifu  kiou202503020101.usen  kiou202503020101.usi  oui202509090101.kif  分岐b.usen
scripts/: build-linux.sh  build-macos.sh  build-windows.ps1  check-include-counts.sh  check-translation-sync.sh  clang_tidy_wrapper.sh  extract-kpi-json.sh  kpi-diff.py  run_navigation_tests.sh  update-sources.sh  update-test-summary.sh
src/: apptooltipfilter.cpp  changeenginesettingsdialog.cpp  considarationdailog.cpp  elidelabel.cpp  engineregistrationdialog.cpp  globaltooltip.cpp  kiftosfenconverter.cpp  kifuanalysisresultsdisplay.cpp  kifurecordlistmodel.cpp  main.cpp  mainwindow.cpp  movevalidator.cpp  promotedialog.cpp  sfenpositiontracer.cpp  shogiboard.cpp  shogiclock.cpp  shogiengineinfoparser.cpp  shogienginethinkingmodel.cpp  shogigamecontroller.cpp  shogiinforecord.cpp  shogimove.cpp  shogiutils.cpp  shogiview.cpp  solidtooltip.cpp  startgamedialog.cpp  tsumeshogisearchdialog.cpp  usi.cpp  versiondialog.cpp
tests/: CMakeLists.txt  bench_movevalidator.cpp  engineregistration_test_engine.cpp  kifu_test_helper.h  test_stubs.cpp  test_stubs_analysis_coordinator.cpp  test_stubs_analysisflow.cpp  test_stubs_analysistabwiring.cpp  test_stubs_cleanup.cpp  test_stubs_game_end_handler.cpp  test_stubs_game_start_flow.cpp  test_stubs_game_start_orchestrator.cpp  test_stubs_gamestrategy.cpp  test_stubs_lifecycle_runtime.cpp  test_stubs_matchcoordinator.cpp  test_stubs_settings.cpp  test_stubs_sfen_collection.cpp  test_stubs_ui_display.cpp  test_stubs_ui_state_policy.cpp  test_stubs_usiprotocol.cpp  test_stubs_wiring_contracts.cpp  tst_abstractlistmodel.cpp  tst_analysis_coordinator.cpp  tst_analysisflow.cpp  tst_app_branch_navigation.cpp  tst_app_error_handling.cpp  tst_app_game_session.cpp  tst_app_kifu_load.cpp  tst_app_lifecycle_pipeline.cpp  tst_app_ui_state_policy.cpp  tst_consideration_resolver.cpp  tst_coredatastructures.cpp  tst_csaconverter.cpp  tst_csaprotocol.cpp  tst_dock_layout.cpp  tst_enginemovevalidator_compat.cpp  tst_enginemovevalidator_context.cpp  tst_enginemovevalidator_crosscheck.cpp  tst_engineregistrationhandler.cpp  tst_errorbus.cpp  (+61 more)
tests/fakes/: branchtreewidget.h  engineanalysistab.h  recordpane.h
tests/fixtures/: test_basic.csa  test_basic.ki2  test_basic.kif  test_basic.usen  test_collection.sfen  test_comments.kif  test_drop.csa  test_handicap.usen  test_resign.usi
ui/: changeenginesettingsdialog.ui  considarationdialog.ui  csagamedialog.ui  engineregistrationdialog.ui  kifuanalysisdialog.ui  mainwindow.ui  startgamedialog.ui  versiondialog.ui
(+1712 files in other folders)
